[metadata]
name = jwt-verify-solutions-python-SmartClean
version = 1.0.0
author = SmartClean
author_email = neel@smartclean.sg
description = Package containing utility to verify signed JWT access token
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smartclean/jwt-verify-solutions-python
project_urls =
    Bug Tracker = https://github.com/smartclean/jwt-verify-solutions-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: ? :: ?
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
